# WaveSpeedAI-Skills

./: .editorconfig  .gitignore  .starter-meta.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.pt-BR.md  install.sh  pyproject.toml
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  markdown-link-check.json
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml  dod.yml  lint.yml
.specs/: README.md
.specs/architecture/: ADR-001-example.md  ADR-template.md  DESIGN.md  PATTERNS.md
.specs/product/: DOMAIN.md  PERSONAS.md  VISION.md
.specs/sprints/: BACKLOG.md
.specs/sprints/sprint-01/: 01-example.task.md  SPRINT.md
.specs/workflow/: CONTRIBUTING.md  RELEASE.md  WORKFLOW.md
agents/claude/: SKILL.md
agents/codex/: SKILL.md
agents/cursor/: SKILL.md
agents/generic/: SKILL.md
agents/hermes/: SKILL.md
agents/openclaw/: SKILL.md
agents/windsurf/: SKILL.md
cli/: cli.py  wavespeed-cli
docs/media/scenes/: README.md
examples/: 01-text-to-image.md  02-image-to-video.md  03-text-to-video-with-audio.md  04-llm-chat.md  05-lora.md  06-serverless-worker.md  07-webhooks.md  08-batch-jobs.md
references/: error-codes.md  models.md  rate-limits.md  rest-api.md  webhooks.md
remotion-tutorial/: README.md  package.json  remotion.config.ts  tsconfig.json
remotion-tutorial/src/: Root.tsx
remotion-tutorial/src/tutorial/: Tutorial.tsx  i18n.ts  theme.ts  timing.ts
remotion-tutorial/src/tutorial/components/: BackdropGradient.tsx  Card.tsx  Chip.tsx  CodeBlock.tsx  HostBadge.tsx  Logo.tsx  MediaPreview.tsx  ParticleField.tsx  SceneFrame.tsx  SceneTitle.tsx
remotion-tutorial/src/tutorial/scenes/: SceneCli.tsx  SceneExamples.tsx  SceneHosts.tsx  SceneInstall.tsx  SceneIntro.tsx  SceneOutro.tsx  SceneWhatIsSkill.tsx
scripts/: verify-skill.sh
