[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavespeedai-skills"
version = "1.2.0"
description = "Provider-agnostic CLI for the WaveSpeedAI inference platform — 700+ media models (image, video, audio, 3D) plus 290+ OpenAI-compatible LLMs through a single API key. Single-file Python with a thin shell shim, plus skill bundle for Claude Code, Codex, Hermes, OpenClaw."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Wesley Simplicio", email = "wesleybob4@gmail.com" }]
keywords = ["wavespeed", "wavespeedai", "z-image", "seedance", "claude", "codex", "agent", "skill", "cli", "ai", "media", "image-generation", "video-generation", "llm-proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["requests>=2.31", "wavespeed>=1.0.8"]

[project.scripts]
wavespeed-cli = "wavespeedai_skills.cli:main"

[project.urls]
Homepage = "https://github.com/wesleysimplicio/WaveSpeedAI-Skills"
Repository = "https://github.com/wesleysimplicio/WaveSpeedAI-Skills"
Issues = "https://github.com/wesleysimplicio/WaveSpeedAI-Skills/issues"
Changelog = "https://github.com/wesleysimplicio/WaveSpeedAI-Skills/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["wavespeedai_skills"]

[tool.setuptools.package-dir]
wavespeedai_skills = "cli"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["agents/", "examples/", "references/"]

[tool.ruff.lint]
# E: pycodestyle errors, F: pyflakes, I: import sort, UP: pyupgrade,
# B: bugbear, SIM: simplify, RUF: ruff-specific.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",   # line too long — formatter handles
  "B008",   # function call in argument default — argparse uses this pattern
  "SIM105", # contextlib.suppress vs try/except — readability call
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_incomplete_defs = false
strict_optional = true
files = ["cli/cli.py"]
